iniciando o css com o header e main

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="div_quadrado">11</div>
         </section>
 
+        <!-- Barra lateral -->
         <aside class="sidebar">Sidebar</aside>
     </main>
 
