inclui css aside, footer, falta ajustar div_quadrado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
 
         <!-- Barra lateral -->
-        <aside class="sidebar">Sidebar</aside>
+        <aside>Sidebar</aside>
     </main>
 
     <footer>Footer</footer>
