--- a/index.html
+++ b/index.html
@@ -18,22 +18,35 @@
     <main>
         <!-- Container com todos os quadrados -->
         <section class="container">
-            <!-- cada quadrado -->
-            <div class="div_quadrado">1</div>
-            <div class="div_quadrado">2</div>
-            <div class="div_quadrado">3</div>
-            <div class="div_quadrado">4</div>
-            <div class="div_quadrado">5</div>
-            <div class="div_quadrado">6</div>
-            <div class="div_quadrado">7</div>
-            <div class="div_quadrado">8</div>
-            <div class="div_quadrado">9</div>
-            <div class="div_quadrado">10</div>
-            <div class="div_quadrado">11</div>
+            
+            <p>main</p>
+
+            <!-- cada conjunto de quadrados -->
+            <article>
+                <div class="div_quadrado">1</div>
+                <div class="div_quadrado">2</div>
+                <div class="div_quadrado">3</div>
+                <div class="div_quadrado">4</div>
+
+            </article>
+
+            <article>
+                <div class="div_quadrado">5</div>
+                <div class="div_quadrado">6</div>
+                <div class="div_quadrado">7</div>
+                <div class="div_quadrado">8</div>
+            </article>
+            
+            <article>
+                <div class="div_quadrado">9</div>
+                <div class="div_quadrado">10</div>
+                <div class="div_quadrado">11</div>
+            </article>
         </section>
 
         <!-- Barra lateral -->
         <aside>Sidebar</aside>
+
     </main>
 
     <footer>Footer</footer>
