incluindo o visibility:hidden pra manter o espaço do último quadrado da main

--- a/index.html
+++ b/index.html
@@ -25,24 +25,27 @@
 
              <!-- cada conjunto de quadrados -->
                 <article>
-                    <div class="div_quadrado">1</div>
-                    <div class="div_quadrado">2</div>
-                    <div class="div_quadrado">3</div>
-                    <div class="div_quadrado">4</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
 
                 </article>
 
                 <article>
-                    <div class="div_quadrado">5</div>
-                    <div class="div_quadrado">6</div>
-                    <div class="div_quadrado">7</div>
-                    <div class="div_quadrado">8</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
                 </article>
             
                 <article>
-                    <div class="div_quadrado">9</div>
-                    <div class="div_quadrado">10</div>
-                    <div class="div_quadrado">11</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
+                    <div class="div_quadrado">item</div>
+                    <!-- div_invisível pra aplicar no css o visibility:hidden -->
+                    <div class="div_quadrado div_invisível"></div>
+
                 </article>
 
             </div>
