mudando letra pra minúscula

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header>Header</header>
+    <header>header</header>
 
     <main>
         <!-- Container com todos os quadrados -->
@@ -52,11 +52,11 @@
         </section>
 
         <!-- Barra lateral -->
-        <aside>Sidebar</aside>
+        <aside>sidebar</aside>
 
     </main>
 
-    <footer>Footer</footer>
+    <footer>footer</footer>
 
        
 </body>
